# slang-cli-rs

./: Cargo.toml  build.rs
src/: lib.rs  main.rs
test-shaders/: bindless_triangle.slang
