[package]
name = "slang-cli-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"

[build-dependencies]
curl = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", features = ["deflate"], default-features = false }

[dev-dependencies]
rspirv = "0.12"
